Fixes for Dredd testing
